unpackaged/main/default/objects/ETA_Notification__e/ETA_Notification__e.object-meta.xml
<CustomObject>
    <label>ETA Notification</label>
    <pluralLabel>ETA Notifications</pluralLabel>
</CustomObject>