unpackaged/main/default/objects/ETA_Notification__e/fields/Appointment_Number__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Number__c</fullName>
    <description>Service Appointment Auto-Number</description>
    <label>Appointment Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>