unpackaged/main/default/objects/ETA_Notification__e/fields/EventKey__c.field-meta.xml
<CustomField>
    <fullName>EventKey__c</fullName>
    <label>EventKey</label>
    <length>30</length>
    <type>Text</type>
</CustomField>