unpackaged/main/default/objects/ETA_Notification__e/fields/Resource_Absence_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Absence_Id__c</fullName>
    <label>Resource Absence Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>