unpackaged/main/default/objects/ETA_Notification__e/fields/Run_InDay__c.field-meta.xml
<CustomField>
    <fullName>Run_InDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run InDay</label>
    <type>Checkbox</type>
</CustomField>