unpackaged/main/default/objects/ETA_Notification__e/fields/Run_RSO__c.field-meta.xml
<CustomField>
    <fullName>Run_RSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run RSO</label>
    <type>Checkbox</type>
</CustomField>