unpackaged/main/default/objects/ETA_Notification__e/fields/Service_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Id__c</fullName>
    <label>Service Resource Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>