unpackaged/main/default/objects/ETA_Notification__e/fields/Territory_Ids__c.field-meta.xml
<CustomField>
    <fullName>Territory_Ids__c</fullName>
    <label>Territory Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>