unpackaged/main/default/objects/ETA_Notification__e/fields/Time_Delta__c.field-meta.xml
<CustomField>
    <fullName>Time_Delta__c</fullName>
    <label>Time Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>