unpackaged/main/default/objects/ETA_Notification__e/fields/Trigger_time__c.field-meta.xml
<CustomField>
    <fullName>Trigger_time__c</fullName>
    <label>Trigger time</label>
    <type>DateTime</type>
</CustomField>