unpackaged/main/default/objects/ETA_Notification__e/fields/Update_Current_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Update_Current_Appointment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update Current Appointment</label>
    <type>Checkbox</type>
</CustomField>