unpackaged/main/default/objects/ETA_Notification__e/fields/Update_Related_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Update_Related_Appointments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Related Appointments</label>
    <type>Checkbox</type>
</CustomField>